# Capture

./: .gitignore  CMakeLists.txt  Draw.cpp  test.in  test.txt
include/: Counter.h  InputReader.h
src/: Counter.cpp  InputReader.cpp  main.cpp
